Fixed bug where output box buttons would go offscreen when text in output box too large. Also adjusted padding in output box

--- a/src/renderer/styles/globals.css
+++ b/src/renderer/styles/globals.css
@@ -25,7 +25,7 @@ body,
 
 .outputBox {
   border-radius: 0.5em;
-  padding: 2em;
+  padding: 1.75em 1em 1.75em 1.75em;
   text-align: left;
   /* border: #AAAAAA 1px solid; */
   overflow-wrap: break-word;
